try to fix horizontal scroll

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -42,13 +42,13 @@ body {
 }
 
 #navbar-links {
-  @media (min-width: 530px) {
+  @media (min-width: 550px) {
     flex-wrap: wrap;
   }
 }
 
 #header-link {
-  font-size: 1rem;
+  font-size: .75rem;
   color: white;
   text-decoration: none;
   //margin: 1 rem;
